--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "^2.29.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-loader-kit": "^4.1.0",
+    "react-native-progress": "^5.0.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
