--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/checkbox": "^0.5.20",
     "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/bottom-tabs": "^7.7.2",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.1",
     "@reduxjs/toolkit": "^2.9.2",
